--- a/src/components/ColorAxis/ColorAxis.scss
+++ b/src/components/ColorAxis/ColorAxis.scss
@@ -1,13 +1,21 @@
 .ColorAxis {
   margin-bottom: 16px;
-  width: 300px;
 
   &:last-child {
     margin-bottom: 0;
   }
 
+  display: flex;
+  align-items: center;
+
   &__canvas {
     // background-color: pink;
     // border: 1px solid grey;
+  }
+  &__name {
+    flex: 0 0 100px;
+  }
+  &__value {
+    margin-left: 16px;
   }
 }
