--- a/src/components/ColorSpace/ColorSpace.scss
+++ b/src/components/ColorSpace/ColorSpace.scss
@@ -1,14 +1,9 @@
 .ColorSpace {
   padding: 8px;
-  width: 300px;
-  border: 2px solid silver;
+  // width: 300px;
+  // border: 2px solid silver;
 
-  margin-right: 8px;
-  &:last-child {
-    margin-right: 0;
-  }
-
-  &__title {
+  &__name {
     font-size: 115%;
     font-weight: bold;
     margin-bottom: 8px;
