--- a/src/components/ColorGraph/ColorGraph.scss
+++ b/src/components/ColorGraph/ColorGraph.scss
@@ -2,9 +2,10 @@
 
 .ColorGraph {
   &__canvas {
-    // $color-a: #fafafa;
     $color-a: #fbfbfa;
     $color-b: #eff1f2;
+    $color-a: #444444;
+    $color-b: #4d4d4d;
     $size: 30px;
     $size-half: $size / 2;
 
