--- a/src/components/ColorGraph/ColorGraph.css
+++ b/src/components/ColorGraph/ColorGraph.css
@@ -1,6 +1,6 @@
 .ColorGraph__canvas {
-  border: 4px solid #eff1f2;
-  background-color: #eff1f2;
-  background-image: linear-gradient(45deg, #fbfbfa 25%, transparent 25%), linear-gradient(-45deg, #fbfbfa 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #fbfbfa 75%), linear-gradient(-45deg, transparent 75%, #fbfbfa 75%);
+  border: 4px solid #4d4d4d;
+  background-color: #4d4d4d;
+  background-image: linear-gradient(45deg, #444444 25%, transparent 25%), linear-gradient(-45deg, #444444 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #444444 75%), linear-gradient(-45deg, transparent 75%, #444444 75%);
   background-size: 30px 30px;
   background-position: 0 0, 0 15px, 15px -15px, -15px 0px; }
